--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,6 @@
               <!-- Фильтры -->
             </div>
           </div>
-
-
         </div>
       </div>
     </header>
@@ -36,5 +34,6 @@
           </section>
       </div>
     </main>
+    <script src="./bundle.js"></script>
   </body>
 </html>
